<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/universal_background">


    <EditText
        android:id="@+id/nombreEditText"
        android:layout_width="399dp"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:hint="@string/nombre_del_jugador"
        android:inputType="text"
        android:maxLines="1"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_controller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/controlar_tiempo"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreEditText"
        app:layout_constraintVertical_bias="0.036"
        tools:layout_editor_absoluteX="161dp" />

    <RadioGroup
        android:id="@+id/time_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_controller">

        <RadioButton
            android:id="@+id/yes_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/si" />

        <RadioButton
            android:id="@+id/no_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />


    </RadioGroup>

    <TextView
        android:id="@+id/difficulty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dificultad"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_group"
        app:layout_constraintVertical_bias="0.038"
        tools:layout_editor_absoluteX="177dp" />

    <RadioGroup
        android:id="@+id/difficulty_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_text">

        <RadioButton
            android:id="@+id/easy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fácil" />

        <RadioButton
            android:id="@+id/medium_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Media" />

        <RadioButton
            android:id="@+id/hard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Difícil" />
    </RadioGroup>

    <TextView
        android:id="@+id/map_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/selecciona_mapa"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_group"
        tools:layout_editor_absoluteX="168dp" />

    <Spinner
        android:id="@+id/spinnerMap"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_select" />

    <ImageButton
        android:id="@+id/exitOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@null"
        android:src="@drawable/exit"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/velocity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enemy Velocity"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMap" />

    <RadioGroup
        android:id="@+id/velocity_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/velocity">

        <RadioButton
            android:id="@+id/x1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Normal" />

        <RadioButton
            android:id="@+id/x2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fast" />

        <RadioButton
            android:id="@+id/x4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Very Fast" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>